--- a/style.css
+++ b/style.css
@@ -25,9 +25,6 @@ body {
 #info {  
     display: flex;
     flex-direction: column;
-    /* position: absolute;
-    top: 33%;
-    left: 10%; */
 }
 #info h1 {
     margin: 0;
@@ -143,6 +140,12 @@ body {
 }
 .trophy{
     width: 600px;
+}
+
+.projects {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .project-background-top {
     width: 100%;
