--- a/style.css
+++ b/style.css
@@ -125,13 +125,13 @@ body {
     justify-content: space-evenly;
 }
 .school-info {
-    margin: 90px 0 0 150px;
+    margin: 4em 0 0 5em;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 .school-info img {
-    width: 480px;
+    width: 25em;
     border-radius: 10px;
     box-shadow: 10px 10px 8px #d7d7d7;
 }
@@ -139,14 +139,20 @@ body {
     transform: scale(1.1);
 }
 .trophy{
-    width: 600px;
+    width: 26em;
+    padding-top: 4em;
 }
 
 .projects {
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
+
+.projects__headline {
+    display: contents;
+}
+
 .project-background-top {
     width: 100%;
     position: absolute;
@@ -157,47 +163,63 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1000px;
+    width: 100%;
 }
 .project-title {
-    width: 48.6%;
+    width: 100%;
+    text-align: center;
     margin: 0;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    align-items: center;
+    padding: 1em 0;
     background-color: white;
     border: 4px solid #9a81b8;
     border-bottom: 0;
+    text-decoration: none;
+    color: #4F02A7;
 }
 .project-title:hover {
     color: white;
     background-color: #4F02A7;
-    cursor: pointer;
 }
 video {
-    width: 50%;
+    width: 100%;
     border: 4px solid #9a81b8;
 }
 .project-design {
-    margin: 80px 150px 170px 150px;
+    width: 100%;
+    max-width: 900px;
+    margin: 5em 3em;
     display: flex;
     justify-content: space-between;
+    gap: 10em;
 }
-.photoshop img, .realistic img, .creative img {
-    width: 80%;
-    padding-top: 12%;
-}
-.photoshop, .realistic, .creative {
+
+.nextjs, .boks2-go{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 16em;
     border: 2px solid #9a81b8;
     border-radius: 5px;
     box-shadow: 10px 10px 8px lightgrey;
 }
-.photoshop:hover, .realistic:hover, .creative:hover {
-    transform: scale(1.2);
+
+.nextjs img, .boks2-go img{
+    width: 90%;
+    padding: 1em;
 }
+
+.nextjs a, .boks2-go a {
+    padding: 1em 0;
+    color: #4F02A7;
+}
+
+
+.nextjs a:hover, .boks2-go a:hover {
+    color: #ad90e1;
+}
+
 .project-background-bottom {
     width: 100%;
     position: absolute;
@@ -240,8 +262,6 @@ span {
 }
 .hobbies-triangles {
     width: 40%;
-    position: absolute;
-    right: 2%;
     z-index: -1;
 }
 .hobbies-img01 {
